--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -9,12 +9,18 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: install deps
-        run: sudo apt-get update && sudo apt-get install -y git doxygen graphviz && sudo mkdir /docs && sudo chmod 777 /docs
+        run: |
+          sudo apt-get update && sudo apt-get install -y git doxygen graphviz
+          sudo mkdir /docs && sudo chmod 777 /docs
+          git clone https://github.com/jothepro/doxygen-awesome-css
 
       - name: gen docs
         run: chmod +x docs.sh && ./docs.sh
 
+      - name: disable indexation
+        run: cp robots.txt /docs/html
+
       - name: deploy
         uses: JamesIves/github-pages-deploy-action@v4
         with:
-          folder: /docs
+          folder: /docs/html
