--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -24,7 +24,7 @@ jobs:
         run: |
           sudo apt-get update && sudo apt-get install -y git doxygen graphviz
           sudo mkdir /docs && sudo chmod 777 /docs
-          git clone https://github.com/jothepro/doxygen-awesome-css
+          git clone https://github.com/jothepro/doxygen-awesome-css --depth=1
 
       - name: gen docs
         run: chmod +x docs.sh && ./docs.sh
